# FDTD_Solver

./: .floydexpt  .floydignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  dowload_floyd.sh  run_cone.sh  run_lens_v2.sh  run_lens_v3.sh  run_lens_v4.sh  run_sphere.sh  run_surf_v1.sh
postprocessing/: calculate_max.py  calculate_spot.py  gen_png.py  main.py  proccess_max.sh  proccess_spots.sh  read_archive.py  video.py
server/: Dockerfile  docker-compose.yaml  index.js  package-lock.json  package.json  postcss.config.js  webpack.config.js
server/frontend/: index.html  index.js
src/BoundaryCond/: ABC3D.cpp  ABC3D.h  ABCTE.cu  ABCTE.h  ABCTE_thrust.cu  ABCTM.cu  ABCTM.h  ABCTM_thrust.cu  BoundaryCond.cpp  BoundaryCond.h  PeriodicCondTE.cu  PeriodicCondTE.h  PeriodicCondTM.cu  PeriodicCondTM.h  TFSFCondTE.cpp  TFSFCondTE.h  TFSFCondTE_thrust.cu  TFSFCondTM.cpp  TFSFCondTM.h  TFSFCondTM_thrust.cu
src/Grids/: Grid1DTE.cpp  Grid1DTE.h  Grid1DTM.cpp  Grid1DTM.h  Grid3D.cpp  Grid3D.h  GridTE.cpp  GridTE.h  GridTM.cpp  GridTM.h
src/Parser/: Checker.cpp  Checker.h  Parser.cpp  Parser.h  main.cu
src/Routines/: ExOutputRoutineTE.cpp  ExOutputRoutineTE.h  EyOutputRoutineTE.cpp  EyOutputRoutineTE.h  EzOutputRoutine3D.cpp  EzOutputRoutine3D.h  EzOutputRoutineTM.cpp  (+12 more)
templates/: template_TE.tpl  template_TM.tpl
world_cone_waveguide/: main.py
world_lenses/: main.py
world_lenses_v2/: main.py
world_lenses_v3/: main.py
world_lenses_v4/: main.py
world_sphere_waveguide/: main.py
world_surface/: main.py
world_waveguide/: examples.sh  gen_world.py
(+158 files in other folders)
